--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "morgan": "^1.10.0",
     "node-cron": "^3.0.2",
     "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "winston": "^3.10.0",
     "zod": "^3.21.4"
   }
