--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ethers": "^6.7.1",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
@@ -30,6 +31,7 @@
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "web3": "^4.1.1",
     "winston": "^3.10.0",
     "zod": "^3.21.4"
   }
