--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "request-promise": "^4.2.6",
     "web3": "^4.1.1",
     "winston": "^3.10.0",
     "zod": "^3.21.4"
