--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^5.0.0",
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
+    "bignumber.js": "^4.0.4",
     "body-parser": "^1.20.2",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
@@ -33,6 +34,7 @@
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "puppeteer": "^21.3.8",
     "request-promise": "^4.2.6",
     "web3": "^4.1.1",
     "winston": "^3.10.0",
